# opengl_samples

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
assets/: simple-shader.fs  simple-shader.vs
assets/shaders/: environment-shader.fs  environment-shader.vs  object-shader.fs  object-shader.vs  shadowmap-shader.vs  torus-shader.fs  torus-shader.vs
assets/spaceship/: Space.mtl
